# posix

./: .clang-format  .gitignore  .typos.toml  CMakeLists.txt  README.md  install.sh  moon.mod.json  package.json  pnpm-lock.yaml  run_all_examples.py  run_all_examples.ts
.github/workflows/: build_libnative.mbt.sh  build_libposix.mbt.sh  check.yaml  rm_incompatible_in_apple.sh
src/: dirent.mbt  errno.mbt  fcntl.mbt  imports.mbt  moon.pkg.json  posix.mbti  stdio.mbt  types.mbt  wait.mbt
src/examples/: mk_ex.py
src/examples/00-template/: 00-template.mbti
src/examples/01-close/: 01-close.mbti  main.mbt  pkg.generated.mbti
src/examples/02-openat/: 02-openat.mbti  main.mbt  pkg.generated.mbti
src/examples/03-getcwd/: 03-getcwd.mbti  main.mbt  pkg.generated.mbti
src/examples/04-dup/: 04-dup.mbti  main.mbt  pkg.generated.mbti
src/examples/05-fputc/: 05-fputc.mbti  main.mbt  pkg.generated.mbti
src/examples/06-mkdirat/: 06-mkdirat.mbti  main.mbt  pkg.generated.mbti
src/examples/07-fputs/: main.mbt  (+2 more)
src/posix/: bitor.mbt  dirent.mbt  dummy.mbt  errno_linux.mbt  fcntl.mbt  imports.mbt  moon.pkg.json  pkg.generated.mbti  posix.mbti  stat.mbt  stat_inode.mbt  stdio.mbt  stub.c  types.mbt  unistd.mbt  unistd_at.mbt  unistd_conf.mbt  unistd_fd.mbt  unistd_id.mbt  wait.mbt
stub/: CMakeLists.txt
stub/inc/: moonbit_posix_types.h
stub/src/: dirent.c  errno.c  fcntl.c  grp.c  signal.c  stdio.c  stdlib.c  time.c  unistd.c  unistd_at.c  unistd_conf.c  unistd_fd.c  unistd_id.c
stub/src/gnu/: unistd_conf.c
stub/src/sys/: stat.c  stat_inode.c  uio.c  utsname.c  wait.c
(+134 files in other folders)
